# locest

./: .gitignore  CHANGELOG.md  README.md  cabal.project  locest.cabal  stack.yaml
.github/workflows/: main.yml
docs/: README.md  conf.py  index.rst
playground/: age_sampling_test.tsv  distMatrixDists.tsv  distMatrixGrid.tsv  distMatrixObs.tsv  experiment_2D.R  experiment_2D.config  locest.aux  locest.ps  locest_playground.Rproj  normalSearch.conf  normalSearchTestConfig.txt  plot_res.R  prep_data.R  shortSearchTestConfig.txt  test2CurrycarbonInput.txt  test2CurrycarbonSamples.csv  test2CurrycarbonSamples.tsv  test2Grid.tsv  test2GridOnePoint.tsv  test2Obs.tsv  test2SpatGrid.tsv  testObs.tsv
playground/code/2D/: experiment_2D.R  experiment_2D.conf  experiment_2D_cross.conf
playground/code/spatiotemporal/: basic.conf  cross.conf  mobest_comparison.R  prep_data.R  search_stuttgart.R
playground/code/variograms/: simple_variograms.R
playground/data_tracked/: README.md  test_area.gpkg  test_observations.janno
src-executables/: Main-kas.hs  Main-locest.hs
src/LocEst/: CoreAlgorithms.hs  Distance.hs  Distributions.hs  Exceptions.hs  Math.hs  MathUtils.hs  Parsers.hs  ReorderVars.hs  Types.hs  TypesFlat.hs  TypesPositions.hs  TypesUtils.hs  Utils.hs
src/LocEst/CLI/: ConfigLang.hs  Cross.hs  Crossvalidate.hs  Grid.hs  Interface.hs  Interpolate.hs  Plot.hs  SampleAge.hs  Search.hs  Search2.hs  Serialise.hs  Utils.hs  Vario.hs  VarioFit.hs
src/LocEst/Math/: Basics.hs  MultivariateNormal.hs
tests/: GoldenSpec.hs  MainSpec.hs  MathSpec.hs
tests/golden/: 01_basic_spacetime.conf  02_spacetime_wrong_depvar_in_obs.conf
tests/golden/inData/: 01_obs_spacetime.tsv  02_spatgrid_spacetime.tsv  03_obs_spacetime_wrong_depvar.tsv
tests/golden/outCLI/: 01_basic_spacetime.out  02_spacetime_wrong_depvar_in_obs.out
