name:                locest
version:             0.0.1.0
synopsis:            Spatiotemporal interpolation and search
homepage:            https://github.com/nevrome/locest
category:            Archaeoinformatics
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

source-repository head
    type:               git
    location:           https://github.com/nevrome/locest.git

library
    exposed-modules:
      LocEst.CLI.Search, LocEst.Types, LocEst.Parsers, LocEst.Distance, LocEst.MathUtils,
      LocEst.CLI.Interface, LocEst.CoreAlgorithms, LocEst.Utils, LocEst.CLI.Crossvalidate,
      LocEst.CLI.Serialise
    hs-source-dirs:
      src
    build-depends:
        base >= 4.14 && < 5
      , bytestring
      , cassava
      , cassava-conduit >= 0.6.0 && < 1.0.0
      , filepath >= 1.4 && < 1.5
      , unordered-containers
      , conduit
      , conduit-algorithms
      , deepseq
      , vector
      , optparse-applicative
      , parsec
      , mtl
      , random
      , serialise
    default-language:
      Haskell2010

executable locest
    main-is:
      Main-locest.hs
    hs-source-dirs:
      src-executables
    build-depends:
        base
      , locest
      , optparse-applicative >= 0.16 && < 0.18
      , filepath
    other-modules:
      Paths_locest
    default-language:
      Haskell2010
    ghc-options:
      -threaded -with-rtsopts=-N
