name:                locest
version:             0.0.1.0
synopsis:            Spatiotemporal interpolation and search
homepage:            https://github.com/nevrome/locest
category:            Archaeoinformatics
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

source-repository head
    type:               git
    location:           https://github.com/nevrome/locest.git

library
    exposed-modules:
      LocEst.CLI.Search, LocEst.Types, LocEst.Parsers, LocEst.Distance, LocEst.MathUtils,
      LocEst.CLI.Interface, LocEst.CLI.ConfigLang, LocEst.CoreAlgorithms, LocEst.Exceptions,
      LocEst.CLI.Serialise, LocEst.CLI.Vario, LocEst.CLI.Cross, LocEst.CLI.Utils
    hs-source-dirs:
      src
    build-depends:
        base >= 4.14 && < 5
      , bytestring
      , cassava
      , cassava-conduit >= 0.6.0 && < 1.0.0
      , filepath >= 1.4 && < 1.5
      , unordered-containers
      , conduit
      , conduit-algorithms
      , deepseq
      , vector
      , vector-algorithms
      , optparse-applicative
      , parsec
      , perfect-vector-shuffle
      , mtl
      , random
      , serialise
      , statistics
      , hmatrix
    default-language:
      Haskell2010
    -- for stan (https://github.com/kowainik/stan | run with stan --no-default)
    ghc-options:
    --  -fwrite-ide-info
    --  -hiedir=.hie
      -O2
    --  "-ddump-simpl" show GHC core

executable locest
    main-is:
      Main-locest.hs
    hs-source-dirs:
      src-executables
    build-depends:
        base
      , locest
      , optparse-applicative >= 0.16 && < 0.19
      , filepath
      , silently
    other-modules:
      Paths_locest
    default-language:
      Haskell2010
    ghc-options:
      -O2
      -threaded
      -feager-blackholing
      -rtsopts
      "-with-rtsopts=-N"

executable kas
    main-is:
      Main-kas.hs
    hs-source-dirs:
      src-executables
    build-depends:
        base
      , locest
      , hmatrix
      , statistics
    other-modules:
      Paths_locest
    default-language:
      Haskell2010
    ghc-options:
      -O2

test-suite spec
    hs-source-dirs:
      tests
    main-is:
      Spec.hs
    other-modules:
        GoldenSpec, MathSpec
    type:
      exitcode-stdio-1.0
    default-language:
      Haskell2010
    build-depends:
        base >= 4.14 && < 5
      , locest
      , hspec
      , process
      , QuickCheck
      , vector
