name:                locest
version:             0.0.1.0
synopsis:            Spatiotemporal interpolation and search
homepage:            https://github.com/nevrome/locest
category:            Archaeoinformatics
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

source-repository head
    type:               git
    location:           https://github.com/nevrome/locest.git

library
    exposed-modules:
      LocEst.CLI.Search, LocEst.Types, LocEst.TypesFlat, LocEst.TypesUtils, LocEst.Parsers, LocEst.Distance,
      LocEst.CLI.Interface, LocEst.CLI.ConfigLang, LocEst.CoreAlgorithms, LocEst.Utils,
      LocEst.CLI.Serialise, LocEst.CLI.Vario, LocEst.CLI.Cross
    hs-source-dirs:
      src
    build-depends:
        base >= 4.14 && < 5
      , bytestring
      , cassava
      , cassava-conduit >= 0.6.0 && < 1.0.0
      , filepath >= 1.4 && < 1.6
      , unordered-containers
      , conduit
      , deepseq
      , vector
      , vector-algorithms
      , optparse-applicative
      , parsec
      , mtl
      , random
      , serialise
      , statistics
      , hmatrix
      , containers
      , bytestring-lexing
    default-language:
      Haskell2010
    ghc-options:
      -O2
      -- check thoroughly
      -Wall
      -- for static code analysis
      -- -fwrite-ide-info
      -- -hiedir=.hie
      -- "-ddump-simpl" show GHC core

executable locest
    main-is:
      Main-locest.hs
    hs-source-dirs:
      src-executables
    build-depends:
        base
      , locest
      , optparse-applicative >= 0.16 && < 0.20
      , silently
    other-modules:
      Paths_locest
    default-language:
      Haskell2010
    ghc-options:
      -O2
      -rtsopts
      -- for multi-threading
      -- -threaded
      -- "-with-rtsopts=-N"
      -- https://downloads.haskell.org/~ghc/9.6.6/docs/users_guide/using-optimisation.html
      -- Usually GHC black-holes a thunk only when it switches threads.
      -- This flag makes it do so as soon as the thunk is entered.
      -- -feager-blackholing
      -- causes all constructor fields which are marked strict (i.e. !) to be unpacked if possible
      -- a bit of a sledgehammer: it might sometimes make things worse
      -- -funbox-strict-fields
      -- check thoroughly
      -Wall
      -- for static code analysis
      -- -fwrite-ide-info
      -- -hiedir=.hie

test-suite spec
    hs-source-dirs:
      tests
    main-is:
      Spec.hs
    other-modules:
        GoldenSpec
    type:
      exitcode-stdio-1.0
    default-language:
      Haskell2010
    build-depends:
        base >= 4.14 && < 5
      , hspec
      , process
    ghc-options:
      -- check thoroughly
      -Wall
